chatserver_node/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  labels:
    app: server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server

    spec:
      containers:
        - name: server
          image: lusamdebonfils/server:latest
          ports:
            - containerPort: 8080
